--- a/TourGuide/app/src/main/res/layout/activity_details.xml
+++ b/TourGuide/app/src/main/res/layout/activity_details.xml
@@ -5,26 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.hack.tourguide.MainActivity">
+    tools:context="com.hack.tourguide.Details">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:id="@+id/toolbar_layout">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="@string/app_name"/>
-
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_details" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add"
@@ -68,5 +65,6 @@
         android:layout_marginBottom="250dp"
         android:visibility="invisible"
         android:src="@drawable/ic_call_white_24px" />
+
 
 </android.support.design.widget.CoordinatorLayout>
