--- a/TourGuide/app/src/main/res/layout/content_main.xml
+++ b/TourGuide/app/src/main/res/layout/content_main.xml
@@ -16,14 +16,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
         android:id="@+id/linearLayout">
 
         <TextView
-            android:text="You are currently at..."
+            android:text="Select the location"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,31 +41,57 @@
         </android.support.v7.widget.CardView>
 
         <TextView
-            android:text="Look below for more details"
+            android:text="Select from below for more details"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="16dp"/>
+            android:layout_marginTop="30dp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="70dp"
             android:layout_gravity="center">
 
-            <ImageView
-                android:layout_width="180dp"
-                android:layout_height="180dp"
-                android:id="@+id/placesToStayImg"
-                android:src="@drawable/places_to_stay"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginRight="60dp">
 
-            <ImageView
-                android:layout_width="180dp"
-                android:layout_height="180dp"
-                android:layout_marginLeft="5dp"
-                android:id="@+id/attractionsImg"
-                android:src="@drawable/attractions"/>
+                <ImageView
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:id="@+id/attractions"
+                    android:src="@drawable/ic_attractions"/>
+
+                <TextView
+                    android:text="Attractions"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:id="@+id/transport"
+                    android:src="@drawable/ic_transport"/>
+
+                <TextView
+                    android:text="Transport"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -77,29 +99,50 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="45dp"
             android:layout_gravity="center">
 
-            <ImageView
-                android:layout_width="180dp"
-                android:layout_height="180dp"
-                android:id="@+id/transportImg"
-                android:src="@drawable/attractions"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginRight="60dp">
 
-            <ImageView
-                android:layout_width="180dp"
-                android:layout_height="180dp"
-                android:layout_marginLeft="5dp"
-                android:id="@+id/exampleImg"
-                android:src="@drawable/attractions"/>
+                <ImageView
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:id="@+id/emergencyImg"
+                    android:src="@drawable/ic_emergency"/>
+
+                <TextView
+                    android:text="Emergency"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:id="@+id/exampleImg"
+                    android:src="@drawable/ic_accommodation"/>
+
+                <TextView
+                    android:text="Accommodation"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
 
         </LinearLayout>
 
        </LinearLayout>
-
-
-
-
-
 
 </RelativeLayout>
