--- a/TourGuide/app/src/main/res/layout/content_main.xml
+++ b/TourGuide/app/src/main/res/layout/content_main.xml
@@ -41,7 +41,7 @@
         </android.support.v7.widget.CardView>
 
         <TextView
-            android:text="Select from below for more details"
+            android:text="seems like you are at "
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
