--- a/TourGuide/app/src/main/res/layout/activity_main.xml
+++ b/TourGuide/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -36,47 +36,47 @@
         android:text="talk to a guide" />
 
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/add"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--android:layout_marginEnd="@dimen/fab_margin"-->
-        <!--android:layout_marginRight="@dimen/fab_margin"-->
-        <!--android:layout_marginBottom="40dp"-->
-        <!--android:src="@drawable/ic_add_white_24px" />-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="40dp"
+        android:src="@drawable/ic_add_white_24px" />
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/message"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--android:layout_marginEnd="@dimen/fab_margin"-->
-        <!--android:layout_marginRight="@dimen/fab_margin"-->
-        <!--android:layout_marginBottom="110dp"-->
-        <!--android:visibility="invisible"-->
-        <!--android:src="@drawable/ic_textsms_white_24px" />-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="110dp"
+        android:visibility="invisible"
+        android:src="@drawable/ic_textsms_white_24px" />
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/video"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--android:layout_marginEnd="@dimen/fab_margin"-->
-        <!--android:layout_marginRight="@dimen/fab_margin"-->
-        <!--android:layout_marginBottom="180dp"-->
-        <!--android:visibility="invisible"-->
-        <!--android:src="@drawable/ic_videocam_white_24px" />-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="180dp"
+        android:visibility="invisible"
+        android:src="@drawable/ic_videocam_white_24px" />
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/call"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--android:layout_marginEnd="@dimen/fab_margin"-->
-        <!--android:layout_marginRight="@dimen/fab_margin"-->
-        <!--android:layout_marginBottom="250dp"-->
-        <!--android:visibility="invisible"-->
-        <!--android:src="@drawable/ic_call_white_24px" />-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="250dp"
+        android:visibility="invisible"
+        android:src="@drawable/ic_call_white_24px" />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
