--- a/TourGuide/app/src/main/res/layout/content_main.xml
+++ b/TourGuide/app/src/main/res/layout/content_main.xml
@@ -4,10 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.hack.tourguide.MainActivity"
     tools:showIn="@layout/activity_main">
@@ -15,38 +13,33 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:id="@+id/linearLayout">
-
-        <TextView
-            android:text="Select the location"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:paddingBottom="10dp"/>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp">
-
-            <fragment
-                android:id="@+id/autocomplete_fragment"
-                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </android.support.v7.widget.CardView>
 
         <TextView
             android:text="seems like you are at "
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="wrap_content"
+            android:textColor="#000"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"/>
+           />
+        <Button
+            android:id="@+id/city"
+            android:text="location"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#000"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+      />
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/linea2rLayout">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
