--- a/TourGuide/app/src/main/res/layout/content_main.xml
+++ b/TourGuide/app/src/main/res/layout/content_main.xml
@@ -130,7 +130,7 @@
                 <ImageView
                     android:layout_width="120dp"
                     android:layout_height="120dp"
-                    android:id="@+id/exampleImg"
+                    android:id="@+id/accommodationImg"
                     android:src="@drawable/ic_accommodation"/>
 
                 <TextView
