--- a/TourGuide/app/src/main/res/drawable/accommodation_shadding.xml
+++ b/TourGuide/app/src/main/res/drawable/accommodation_shadding.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#888"/>
+            <solid android:color="#669cc1"/>
             <corners android:radius="2dp" />
         </shape>
     </item>
