--- a/TourGuide/app/src/main/res/layout/activity_main.xml
+++ b/TourGuide/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
+                android:textStyle="bold"
+                android:textColor="#000"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="27dp"
                 android:layout_marginStart="27dp"
@@ -99,6 +101,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="27dp"
                 android:layout_marginStart="27dp"
+                android:textStyle="bold"
+                android:textColor="#000"
                 android:layout_marginTop="41dp"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -119,6 +123,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:textStyle="bold"
+                android:textColor="#000"
                 android:layout_marginLeft="27dp"
                 android:layout_marginStart="27dp"
                 android:layout_marginTop="41dp"
@@ -143,6 +149,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="27dp"
+                android:textStyle="bold"
+                android:textColor="#000"
                 android:layout_marginStart="27dp"
                 android:layout_marginTop="41dp"
                 android:ems="10"
