--- a/TourGuide/app/src/main/res/drawable/ic_attractions.xml
+++ b/TourGuide/app/src/main/res/drawable/ic_attractions.xml
@@ -1,9 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#848181"
-        android:pathData="M19,3H5c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2V5c0,-1.1 -0.9,-2 -2,-2zM5,4.99h3C8,6.65 6.66,8 5,8V4.99zM5,12v-2c2.76,0 5,-2.25 5,-5.01h2C12,8.86 8.87,12 5,12zm0,6l3.5,-4.5 2.5,3.01L14.5,12l4.5,6H5z"/>
+<vector android:height="75dp" android:viewportHeight="100.0"
+    android:viewportWidth="100.0" android:width="75dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#000000"
+        android:pathData="m11.03,97.18c-1.18,-1.91 2.25,-5.95 10.04,-11.82 10.23,-7.7 18.6,-10.69 30.23,-10.81 9.12,-0.09 9.61,-0.24 10.43,-3.17 1.54,-5.47 0.68,-21.3 -1.57,-29.24 -1.66,-5.82 -1.85,-8.09 -0.79,-9.15 4.05,-4.05 7.97,11.93 7.35,29.96l-0.45,13.23 4.93,1.9c5.63,2.18 18.35,11.39 21.06,15.26 1,1.43 1.48,3.15 1.07,3.83 -1.03,1.67 -81.26,1.67 -82.3,0zM82.27,90.42c-2.03,-1.68 -7.28,-4.86 -11.67,-7.05 -7.13,-3.56 -9.1,-3.99 -18.42,-3.99 -9.32,0 -11.3,0.43 -18.42,3.99 -4.39,2.19 -9.64,5.37 -11.67,7.05l-3.68,3.06L52.18,93.48 85.96,93.48ZM46.5,65.55c1.73,-7.79 2.26,-15.16 1.46,-20.46l-0.85,-5.65 -4.03,3.08c-4.25,3.24 -7.5,3.81 -10.56,1.87 -1.4,-0.89 -2,-0.52 -2.51,1.55 -0.54,2.22 -1.67,2.8 -6.11,3.12 -6.64,0.48 -15.93,-1.96 -16.87,-4.43 -1.93,-5.04 10.04,-17.84 18.91,-20.22 3.27,-0.88 4.88,-1.93 4.5,-2.93 -0.47,-1.22 -1.11,-1.24 -2.91,-0.12 -1.97,1.23 -2.97,0.81 -6.75,-2.82 -4.41,-4.24 -7.91,-9.66 -7.91,-12.25 0,-2.18 8.04,-4.91 14.39,-4.88 7.19,0.03 14.4,3.18 19.65,8.57l3.95,4.06 4.93,-4.46c7.17,-6.48 12.56,-8.36 22.76,-7.94l8.64,0.36 0.38,5.91c0.35,5.48 0.02,6.27 -4.6,10.88 -3.15,3.15 -5.65,4.7 -6.83,4.22 -1.02,-0.41 -2.64,-1.07 -3.6,-1.46 -1.15,-0.47 -1.88,0.24 -2.15,2.08 -0.5,3.46 -6.47,5.26 -14.84,4.46 -6.69,-0.64 -6.52,-1.08 -4.01,10.75 2.18,10.31 2.3,15.64 0.53,23.89 -1.07,4.98 -1.82,6.2 -3.83,6.2 -2.09,0 -2.37,-0.55 -1.75,-3.38zM25.16,40.75c0,-5.04 1.62,-5.53 7.39,-2.28l5,2.82 3.63,-4.01c5.21,-5.76 4.88,-8.85 -0.98,-9.03 -11.51,-0.36 -15.85,0.93 -21.91,6.52 -7.71,7.11 -7.11,9.1 2.87,9.45 3.63,0.13 3.99,-0.18 3.99,-3.47zM65.46,18.88c0.41,-4.29 1.68,-4.78 7.07,-2.73 4.69,1.78 7.35,0.55 9.76,-4.53 1.74,-3.66 1.81,-4.6 0.43,-5.52 -1.98,-1.32 -11.21,-0.21 -16.41,1.97 -3.86,1.62 -14.13,11.95 -14.13,14.23 0,0.82 2.44,1.18 6.45,0.95 6.29,-0.36 6.46,-0.47 6.83,-4.36zM44.54,20.34c3.65,-2.55 2,-5.64 -5.59,-10.45 -4.16,-2.64 -7.18,-3.6 -11.27,-3.58 -8.28,0.03 -9.63,1.32 -6.3,6 3.06,4.29 4.04,4.61 6.23,1.97 2.68,-3.23 5.86,-2.22 6.81,2.15 1.32,6.08 5,7.51 10.12,3.92z" android:strokeWidth="1.2283237"/>
 </vector>
