--- a/TourGuide/app/src/main/res/layout/activity_main.xml
+++ b/TourGuide/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             android:id="@+id/city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="location"
+            android:text="Colombo"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#fff"
             android:textSize="20sp"
