--- a/TourGuide/app/src/main/res/layout/activity_main.xml
+++ b/TourGuide/app/src/main/res/layout/activity_main.xml
@@ -73,12 +73,12 @@
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_attractions"
+                android:src="@drawable/ic_attractions"
                 android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/attractions"
-                android:layout_toStartOf="@+id/attractions"
-                android:layout_marginRight="21dp"
-                android:layout_marginEnd="21dp" />
+                android:layout_toLeftOf="@+id/attractionsLabel"
+                android:layout_toStartOf="@+id/attractionsLabel"
+                android:layout_marginRight="18dp"
+                android:layout_marginEnd="18dp"/>
 
             <TextView
                 android:id="@+id/attractionsLabel"
@@ -108,7 +108,7 @@
                 android:id="@+id/imageView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_travel"
+                android:src="@drawable/ic_travel"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/transport"
                 android:layout_toStartOf="@+id/transport"
@@ -144,7 +144,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/ic_hotels"
+                android:src="@drawable/ic_hotels"
                 android:layout_marginRight="22dp"
                 android:layout_marginEnd="22dp"
                 android:layout_centerVertical="true"
@@ -180,7 +180,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/ic_emergency"
+                android:src="@drawable/ic_emergency"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/emergency"
                 android:layout_toStartOf="@+id/emergency"
